--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,12 +1,12 @@
 <h1>New book</h1>
 
- <%= form_with mobel: @book do |f| %>
- 
+ <%= form_with model: @book, url: '/books', method: :post do |f| %>
+
   <h4>Title</h4>
    <%= f.text_field :title %>
-  
+
   <h4>Opinion</h4>
    <%= f.text_field :body %>
   <%= f.submit 'Create Book' %>
-  
+
   <% end %>
