--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<h1>Book detail</h1>
+
+<p><%= @book.title %></p>
+
+<p><%= @book.body %></p>
+
+<p><%= @book.user.name %></p>
+
+<%= link_to "Edit", edit_book_path(@book.id) %>
+
+<%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
