--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,17 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <header>
+<body>
+  <header>
     <% if user_signed_in? %>
+      <li>
+       <%= link_to '投稿フォーム', new_book_path %>
+      </li>
+
+      <li>
+          <%= link_to 'マイページ', user_path(current_user.id) %>
+      </li>
+
       <li>
         <%= link_to "Log out", destroy_user_session_path, method: :delete %>
       </li>
@@ -25,5 +33,6 @@
       </li>
     <% end %>
   </header>
+
   <%= yield %>
 </body>
