--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,5 +9,8 @@
   <p>投稿ユーザー画像:<%= image_tag book.user.get_profile_image(100,100) %></p>
   <p>name:<%= @user_name %></p>
   <p>introduction:<%= @user.body %></p>
+
+  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+
 </div>
 <% end %>
