--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,16 +1,38 @@
-<h1>Editing Book</h1>
-<%= form_with model: @book do |f| %>
-
- <h4>Title</h4>
- <%= f.text_field :title %>
-
- <h4>Opinion</h4>
- <%= f.text_field :body %>
-
- <%=f.submit 'Update Book' %>
+<main>
+ <P id="notice"></P>
+  <div class="container">
+    <div class="row">
+     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
+      
+      <%= form_with model: @book do |f| %>
+      
+      <div class="form-group">
+       <label for="book_title">Title</label><br>
+       <%= f.text_field :title %>
+      </div>
+      <div class="form-group">
+       <label for="book_body">Opinion</label><br>
+       <%= f.text_area :body, maxlength: "200" %>
+      </div>
+      <div class="form-group">
+       <%=f.submit 'Update Book',class: "btn btn-success" %>
+      </div>
+      <% end %>
+      
+      <%= link_to "Show", book_path(@book.id) %>
+       |
+       <%= link_to "Back", "/books" %>
+       
+       </div>
+    </div>
+  </div>
  
- <%= link_to "Show", book_path(@book.id) %>
- |
- <%= link_to "Back", "/books" %>
+</main>
 
-<% end %>
+ 
+
+ 
+ 
+
+      
