--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,12 +1,33 @@
-<h1>New book</h1>
-
- <%= form_with model: @book, url: '/books', method: :post do |f| %>
-
-  <h4>Title</h4>
+<main>
+ <h2>New book</h2>
+ 
+ 
+ <from>
+  <%= form_with model: @book, url: '/books', method: :post do |f| %>
+  
+  <div>
+   <h4>Title</h4>
    <%= f.text_field :title %>
+  </div>
+  <div>
+   <h4>Opinion</h4>
+   <%= f.text_area :body, maxlength: "200" %>
+  </div>
+  <div><%= f.submit 'Create Book', class: "btn btn-success" %></div>
+   <% end %>
+ </from>
+ 
+ 
+</main>
 
-  <h4>Opinion</h4>
-   <%= f.text_field :body %>
-  <%= f.submit 'Create Book' %>
 
-  <% end %>
+
+
+ 
+
+  
+
+  
+  
+
+ 
