--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,11 +1,23 @@
-<h1>Book detail</h1>
+<main>
+  <p id="notice"></p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-1">
+        <h2>Book detail</h2>
+        <table class="table">
+          <tbody>
+            <tr>
+              <tb><%= @book.title %></tb>
+              <tb><%= @book.body %></tb>
+              <tb><%= @book.user.name %></tb>
+              <tb><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success" %></tb>
+              <tb><%= link_to "Destroy", book_path(@book.id), class: "btn btn-danger", method: :delete, "data-confirm" => "本当に削除しますか？" %></tb>
+              </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  </main>
 
-<p><%= @book.title %></p>
 
-<p><%= @book.body %></p>
-
-<p><%= @book.user.name %></p>
-
-<%= link_to "Edit", edit_book_path(@book.id) %>
-
-<%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
