--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,12 @@
-<h1>ここはAboutページです</h1>
+<main>
+  <p id = "nontice"></p>
+  <div class = "container">
+  <div class = "row">
+    <h1 class ="px-3 mx-auto">
+      welcome to
+      <strong>Bookers</strong>
+      !
+    </h1>
+   </div>
+  </div>
+</main>
