--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,33 @@
-<h1>User info</h1>
+<main>
+ <p id="notice">
+  <div class="container">
+   <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+     <h2>User info</h2>
+     
+     <%= form_with model: @user do |f| %>
+    <div class="form-group">
+     <label for="inputName">Name</label><br>
+     <%= f.text_field :name, autofocus: true,id:"inputName", placeholder:"名前"%>
+     </div>
+     <div class="form-group">
+      <label for="inputImage">ProfileImage</label><br>
+      <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+      </div>
+      <div class="form-group">
+       <label for="inputBody">Introduction</label><br>
+       <%= f.text_area :body, autofocus: true, maxlength: "50",id:"inputBody", placeholder:"Introduction" %>
+       </div>
+       <%= f.submit "Update User",class: "btn btn-secondary"  %>
+       <% end %>
+    </div>
+   </div>
+  </div>
+ </p>
+ 
+ 
+ 
+ 
+ 
+</main>
 
-<%= form_with model: @user do |f| %>
- <label for="inputName">Name</label>
- <%= f.text_field :name, autofocus: true,id:"inputName", placeholder:"名前"%>
- <label for="inputImage">ProfileImage</label>
- <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
- <label for="inputBody">Introduction</label>
- <%= f.text_field :body, autofocus: true,id:"inputBody", placeholder:"Introduction" %>
- <%= f.submit "Update User" %>
-<% end %>
