--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,19 @@
-<h1>User info</h1>
+<main>
+ <h2>User</h2>
 
-<%= form_with model: @user do |f| %>
- <label for="inputName">Name</label>
- <%= f.text_field :name, autofocus: true,id:"inputName", placeholder:"名前"%>
- <label for="inputImage">ProfileImage</label>
- <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
- <label for="inputBody">Introduction</label>
- <%= f.text_field :body, autofocus: true,id:"inputBody", placeholder:"Introduction" %>
- <%= f.submit "Update User" %>
-<% end %>
+ <thead>
+  <tr>
+   <th>image</th>
+   <th>name</th>
+  </tr>
+ </thead>
+
+ <tbody>
+  <% @users.each do |user| %>
+  <tr>
+   <td><%= image_tag user.get_profile_image(100,100) %></td>
+   <td><%= user.name %></td>
+   <td><%= link_to "Show", user_path(user) %></td>
+  </tr>
+  <% end %>
+ </tbody>
