--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,42 @@
-<h1>User info</h1>
-<duv>
-  <h3><%= @user.name %></h3>
+<main>
+  <div>
+  <h2>User info</h2>
+  
   <%= image_tag @user.get_profile_image(100,100) %>
-</duv>
-
-<%= @book.each do |book| %>
-<div>
-  <p>投稿ユーザー画像:<%= image_tag book.user.get_profile_image(100,100) %></p>
-  <p>name:<%= @user_name %></p>
-  <p>introduction:<%= @user.body %></p>
-
+  
+  <tbody>
+    <tr>name:<%= @user.name %></tr>
+    <tr>introduction:<%= @user.introduction %></tr>
+  </tbody>
+  <div>
+    <% if @user == current_user %>
   <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-
-</div>
-<% end %>
+  <% end %>
+  </div>
+  </div>
+  
+  <div>
+    <h2>Books</h2>
+    
+    <table>
+      <thead>
+        <tr>
+          <th></th>
+          <th>Title</th>
+          <th>Opinion</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @books.each do |book| %>
+        <tr>
+         <td><%= image_tag @user.get_profile_image(100,100) %></td> 
+         <td><%= link_to book.title, "/books/#{book.id}" %></td>
+         <td><%= book.body %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    
+  </div>
+  
+</main>
