--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,12 @@
-<main>
+ <% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+   <% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+   <% end %>
+  </ul>
+ <% end %>
+ 
  <P id="notice"></P>
   <div class="container">
     <div class="row">
@@ -27,12 +35,5 @@
        </div>
     </div>
   </div>
- 
-</main>
-
- 
-
- 
- 
 
       
