--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,30 +1,73 @@
-<main>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this obj from being saved:
+  <ul>
+   <% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+   <% end %>
+  </ul>
+<% end %>
+
+  <p id="notice"></p>
   <div class="container px-5 px-sm-0">
     <div class="row">
-      <div class="col-md-8 offset-md-1">
-        <h2>Books</h2>
-        <table class="table table-hover table-inverse">
-          <thead>
-            <tr>
-              <th></th>
-              <th>Title</th>
-              <th>Opinion</th>
-              <th colspan="3"></th>
-              </tr>
-          </thead>
-          
+      <div class="col-md-3">
+        <h2>User info</h2>
+        <%= image_tag @user.get_profile_image(100,100) %>
+        <table class="table">
           <tbody>
-             <% @books.each do |book| %>
-             <tr>
-               <span>
-                 <%= link_to book.title, "/books/#{book.id}" %>
-                 </span>
-                 <p>Opinion: <%= book.body %></p>
-                </tr>
-             <% end %>
+            <tr>
+              <th>name:<%= @user.name %></th>
+            </tr>
+            <tr>
+              <th>introduction:<%= @user.introduction %></th>
+            </tr>
           </tbody>
         </table>
+        <div class="row">
+          <% if @user == current_user %>
+            <p><%= link_to "ユーザー設定", edit_user_path(@user) %></p>
+          <% end %>
+        </div>
+
+        <h2 class="mt-3">New book</h2>
+        <%= form_with model: @book, url: '/books', method: :post do |f| %>
+          <div class="form-group">
+            <%= f.label :title %>
+            <%= f.text_field :title, class: "form-control book_title" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :opinion %>
+            <%= f.text_area :body, maxlength: "200", class: "form-control book_body" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit 'Create Book', class: "btn btn-success" %>
+          </div>
+        <% end %>
+      </div>
+      <div class="col-md-8 offset-md-1">
+       <h2>Books</h2>
+        <table class="table">
+         <thead>
+           <tr>
+             <th></th>
+             <th>Title</th>
+             <th>Opinion</th>
+           </tr>
+         </thead>
+         <tbody>
+            <% @books.each do |book| %>
+              <tr>
+                <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+                <span>
+                 <td><%= link_to book.title, "/books/#{book.id}" %></td>
+                </span>
+                <td><p><%= book.body %></p></td>
+              </tr>
+            <% end %>
+         </tbody>
+        </table>
+       </div>
       </div>
     </div>
   </div>
-</main>
+
