--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,23 +1,57 @@
-<main>
-  <p id="notice"></p>
-  <div class="container">
+<p id="notice"></p>
+  <div class="container px-5 px-sm-0">
     <div class="row">
+      <div class="col-md-3">
+        <h2>User info</h2>
+        <%= image_tag @user.get_profile_image(100,100) %>
+        <table class="table">
+          <tbody>
+            <tr>name:<%= @user.name %></tr>
+            <tr>introduction:<%= @user.introduction %></tr>
+          </tbody>
+        </table>
+        <div class="row">
+          <% if @user == current_user %>
+            <p><%= link_to "ユーザー設定", edit_user_path(@user) %></p>
+          <% end %>
+        </div>
+
+        <h2 class="mt-3">New book</h2>
+        <%= form_with model: @book, url: '/books', method: :post do |f| %>
+          <div class="form-group">
+            <%= f.label :title %>
+            <%= f.text_field :title, class: "form-control book_title" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :opinion %>
+            <%= f.text_area :body, maxlength: "200", class: "form-control book_body" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit 'Create Book', class: "btn btn-success" %>
+          </div>
+        <% end %>
+      </div>
+
+
       <div class="col-md-8 offset-md-1">
         <h2>Book detail</h2>
         <table class="table">
           <tbody>
             <tr>
-              <tb><%= @book.title %></tb>
-              <tb><%= @book.body %></tb>
-              <tb><%= @book.user.name %></tb>
-              <tb><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success" %></tb>
-              <tb><%= link_to "Destroy", book_path(@book.id), class: "btn btn-danger", method: :delete, "data-confirm" => "本当に削除しますか？" %></tb>
-              </tr>
+              <td><%= link_to user_path(@user.id) do %>
+               <%= image_tag @book.user.get_profile_image(100,100) %>
+              <% end %>
+              </td>
+              <td><%= link_to @book.title, "/books/#{@book.id}" %></td>
+              <td><%= @book.body %></td>
+              <td><%= @book.user.name %></td>
+              <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success" %></td>
+              <td><%= link_to "Destroy", book_path(@book.id), class: "btn btn-danger", method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+            </tr>
           </tbody>
         </table>
+       </div>
       </div>
     </div>
   </div>
-  </main>
-
 
