--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
    <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
      <h2>User info</h2>
-     
+
      <%= form_with model: @user do |f| %>
     <div class="form-group">
      <label for="inputName">Name</label><br>
@@ -16,7 +16,7 @@
       </div>
       <div class="form-group">
        <label for="inputBody">Introduction</label><br>
-       <%= f.text_area :body, autofocus: true, maxlength: "50",id:"inputBody", placeholder:"Introduction" %>
+       <%= f.text_area :introduction, autofocus: true, maxlength: "50",id:"inputBody", placeholder:"Introduction" %>
        </div>
        <%= f.submit "Update User",class: "btn btn-secondary"  %>
        <% end %>
@@ -24,10 +24,10 @@
    </div>
   </div>
  </p>
- 
- 
- 
- 
- 
+
+
+
+
+
 </main>
 
