--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,42 +1,57 @@
-<main>
-  <div>
-  <h2>User info</h2>
-  
-  <%= image_tag @user.get_profile_image(100,100) %>
-  
-  <tbody>
-    <tr>name:<%= @user.name %></tr>
-    <tr>introduction:<%= @user.introduction %></tr>
-  </tbody>
-  <div>
-    <% if @user == current_user %>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
-  </div>
-  </div>
-  
-  <div>
-    <h2>Books</h2>
-    
-    <table>
-      <thead>
-        <tr>
-          <th></th>
-          <th>Title</th>
-          <th>Opinion</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @books.each do |book| %>
-        <tr>
-         <td><%= image_tag @user.get_profile_image(100,100) %></td> 
-         <td><%= link_to book.title, "/books/#{book.id}" %></td>
-         <td><%= book.body %></td>
-        </tr>
+  <p id="notice"></p>
+  <div class="container px-5 px-sm-0">
+    <div class="row">
+      <div class="col-md-3">
+        <h2>User info</h2>
+        <%= image_tag @user.get_profile_image(100,100) %>
+        <table class="table">
+          <tbody>
+            <tr>name:<%= @user.name %></tr>
+            <tr>introduction:<%= @user.introduction %></tr>
+          </tbody>
+        </table>
+        <div class="row">
+          <% if @user == current_user %>
+            <p><%= link_to "ユーザー設定", edit_user_path(@user) %></p>
+          <% end %>
+        </div>
+        
+        <h2 class="mt-3">New book</h2>
+        <%= form_with model: @book, url: '/books', method: :post do |f| %>
+          <div class="form-group">
+            <%= f.label :title %>
+            <%= f.text_field :title, class: "form-control book_title" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :opinion %>
+            <%= f.text_area :body, maxlength: "200", class: "form-control book_body" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit 'Create Book', class: "btn btn-success" %>
+          </div>
         <% end %>
-      </tbody>
-    </table>
-    
+      </div>
+      <div class="col-md-8 offset-md-1">
+        <h2>Books</h2>
+        <table class="table">
+          <thead>
+           <tr>
+             <th></th>
+             <th>Title</th>
+             <th>Opinion</th>
+           </tr>
+          </thead>
+          <tbody>
+            <% @books.each do |book| %>
+              <tr>
+                <td><%= image_tag @user.get_profile_image(100,100) %></td> 
+                <td><%= link_to book.title, "/books/#{book.id}" %></td>
+                <td><%= book.body %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
   
-</main>
