--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,20 +12,24 @@
     <div class="row">
       <div class="col-md-3">
         <h2>User info</h2>
-        <%= image_tag @user.get_profile_image(100,100) %>
+        <th><%= image_tag @user.get_profile_image(100,100) %></th>
         <table class="table">
           <tbody>
             <tr>
-              <th>name:<%= @user.name %></th>
+              <th>name</th>
+              <th><%= @user.name %></th>
             </tr>
             <tr>
-              <th>introduction:<%= @user.introduction %></th>
+              <th>introduction</th>
+              <th><%= @user.introduction %></th>
             </tr>
           </tbody>
         </table>
         <div class="row">
           <% if @user == current_user %>
-            <p><%= link_to "ユーザー設定", edit_user_path(@user) %></p>
+            <%= link_to edit_user_path(@user), class: "btn btn-outline-secondary btn-block" do %>
+              <i class="fas fa-user-cog"></i>
+             <% end %>
           <% end %>
         </div>
 
@@ -57,7 +61,10 @@
          <tbody>
             <% @books.each do |book| %>
               <tr>
-                <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+                <td><%= link_to user_path(book.user.id) do %>
+                 <%= image_tag book.user.get_profile_image(100,100) %><br>
+                <% end %>
+              </td>
                 <span>
                  <td><%= link_to book.title, "/books/#{book.id}" %></td>
                 </span>
