--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div>
    <h4>Opinion</h4>
-   <%= f.text_area :body, maxlength: "200" %>
+   <%= f.text_area :body %>
   </div>
   <div><%= f.submit 'Create Book', class: "btn btn-success" %></div>
    <% end %>
