--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,23 +1,33 @@
+<div>
+  <%= flash[:notice] %>
+</div>
+
 <p id="notice"></p>
   <div class="container px-5 px-sm-0">
     <div class="row">
       <div class="col-md-3">
         <h2>User info</h2>
-        <%= image_tag @user.get_profile_image(100,100) %>
+        <%= image_tag @book.user.get_profile_image(100,100) %>
         <table class="table">
           <tbody>
-            <tr>name:<%= @user.name %></tr>
-            <tr>introduction:<%= @user.introduction %></tr>
+            <tr>
+              <th>name</th>
+              <th><%= @book.user.name%></th>
+            </tr>
+            <tr>
+              <th>introduction</th>
+              <th><%= @book.user.introduction %></th>
+            </tr>
           </tbody>
         </table>
         <div class="row">
-          <% if @user == current_user %>
-            <p><%= link_to "ユーザー設定", edit_user_path(@user) %></p>
-          <% end %>
+            <%= link_to edit_user_path(@book.user), class: "btn btn-outline-secondary btn-block" do %>
+                    <i class="fas fa-user-cog"></i>
+             <% end %>
         </div>
 
         <h2 class="mt-3">New book</h2>
-        <%= form_with model: @book, url: '/books', method: :post do |f| %>
+        <%= form_with model: @new_book, url: '/books', method: :post do |f| %>
           <div class="form-group">
             <%= f.label :title %>
             <%= f.text_field :title, class: "form-control book_title" %>
@@ -38,15 +48,19 @@
         <table class="table">
           <tbody>
             <tr>
-              <td><%= link_to user_path(@user.id) do %>
-               <%= image_tag @book.user.get_profile_image(100,100) %>
+              <td><%= link_to user_path(@book.user.id) do %>
+               <%= image_tag @book.user.get_profile_image(100,100) %><br>
+               <%= @book.user.name %>
               <% end %>
               </td>
               <td><%= link_to @book.title, "/books/#{@book.id}" %></td>
               <td><%= @book.body %></td>
-              <td><%= @book.user.name %></td>
+              <% if @book.user == current_user %>
               <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success" %></td>
+              <% end %>
+              <% if @book.user == current_user %>
               <td><%= link_to "Destroy", book_path(@book.id), class: "btn btn-danger", method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+              <% end %>
             </tr>
           </tbody>
         </table>
