--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,14 +1,20 @@
+<div>
+  <%= flash[:notice] %>
+</div>
+
 <main>
   <p id="notice"></p>
   <div class="container">
     <div class="row">
       <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
         <h1>welcome to
+        <i class="fas fa-book"></i>
         <strong>Boolers</strong>
         !!
         </h1>
         <p>in
-        <strong>bookers</strong>
+        <i class="fas fa-book"></i>
+        <strong>Bookers</strong>
         ,
         </p>
         <p>you can share and exchange your opinions ,<br>
@@ -18,9 +24,8 @@
           <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
           </div>
         <div class="btn-wrapper col-10 mx-auto">
-          <a class="btn btn-success btn-sm btn-block mb-3 sign-up" href="users/sign_up">Sign up</a>
+          <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign up</a>
         </div>
     </div>
   </div>
 </main>
-
