--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
+<div>
+  <%= flash[:notice] %>
+</div>
+
   <p id="notice"></p>
   <div class="container px-5 px-sm-0">
     <div class="row">
@@ -6,16 +10,22 @@
         <%= image_tag @user.get_profile_image(100,100) %>
         <table class="table">
           <tbody>
-            <tr>name:<%= @user.name %></tr>
-            <tr>introduction:<%= @user.introduction %></tr>
+            <tr>
+              <th>name</th>
+              <th><%= @user.name %></th>
+            </tr>
+            <tr>
+              <th>introduction</th>
+              <th><%= @user.introduction %></th>
+            </tr>
           </tbody>
         </table>
         <div class="row">
-          <% if @user == current_user %>
-            <p><%= link_to "ユーザー設定", edit_user_path(@user) %></p>
-          <% end %>
+            <%= link_to edit_user_path(@user), class: "btn btn-outline-secondary btn-block" do %>
+              <i class="fas fa-user-cog"></i>
+             <% end %>
         </div>
-        
+
         <h2 class="mt-3">New book</h2>
         <%= form_with model: @book, url: '/books', method: :post do |f| %>
           <div class="form-group">
@@ -44,7 +54,10 @@
           <tbody>
             <% @books.each do |book| %>
               <tr>
-                <td><%= image_tag @user.get_profile_image(100,100) %></td> 
+                <td><%= link_to user_path(@user.id) do %>
+                 <%= image_tag @user.get_profile_image(100,100) %><br>
+                <% end %>
+                </td>
                 <td><%= link_to book.title, "/books/#{book.id}" %></td>
                 <td><%= book.body %></td>
               </tr>
@@ -54,4 +67,3 @@
       </div>
     </div>
   </div>
-  
